fix darft editor placeholder out of box

--- a/src/Main.css
+++ b/src/Main.css
@@ -113,7 +113,7 @@ a:hover {
 }
 
 .RichEditor-editor-editMode .public-DraftEditor-content {
-    padding: 15px;
+    padding: 40px;
 }
 
 .RichEditor-editor .public-DraftEditor-content {
